* applied patch by Dean Hall to fix several range() bugs
* applied patch by Krzysztof Kowalczyk to add VS 2005, 2008 compatibility.
* reorganized the source so that contributed modules can go into contrib